docs/4.22/machine_configuration/mco-update-boot-images.md
For supported platforms, the Machine Config Operator (MCO) can manage and update the boot image on each node to ensure the Red Hat Enterprise Linux CoreOS (RHCOS) version of the boot image matches the Red Hat Enterprise Linux CoreOS (RHCOS) version appropriate for your cluster.

The following table lists the platforms on which boot image management is available:

| Platform                  | Worker machine sets | Control plane machine sets |
|---------------------------|---------------------|----------------------------|
| Google Cloud              | Enabled by default  | Disabled by default        |
| Amazon Web Services (AWS) | Enabled by default  | Disabled by default        |
| Microsoft Azure           | Enabled by default  | Disabled by default        |
| VMware vSphere            | Enabled by default  | Not supported              |

For all other platforms, the MCO does not update the boot image with each cluster update.

<div class="important">

Boot image management for control plane nodes is a Technology Preview feature only. Technology Preview features are not supported with Red Hat production service level agreements (SLAs) and might not be functionally complete. Red Hat does not recommend using them in production. These features provide early access to upcoming product features, enabling customers to test functionality and provide feedback during the development process.

For more information about the support scope of Red Hat Technology Preview features, see [Technology Preview Features Support Scope](https://access.redhat.com/support/offerings/techpreview/).

</div>

# About boot image management

With boot image management enabled, the Machine Config Operator (MCO) manages and updates the Red Hat Enterprise Linux CoreOS (RHCOS) version of the boot image in the machine sets for your control plane or worker nodes. This means that the MCO updates the boot image whenever you update your cluster. Without boot image management enabled, if your cluster was originally created with an older OpenShift Container Platform version, the boot image that the MCO would use to create new nodes is an older Red Hat Enterprise Linux CoreOS (RHCOS) version, even if your cluster is at a later OpenShift Container Platform version.

New nodes created after enabling the feature use the updated boot image. This feature has no effect on existing nodes.

<div class="note">

The following table lists the platforms on which boot image management is available:

| Platform                  | Worker machine sets | Control plane machine sets |
|---------------------------|---------------------|----------------------------|
| Google Cloud              | Enabled by default  | Disabled by default        |
| Amazon Web Services (AWS) | Enabled by default  | Disabled by default        |
| Microsoft Azure           | Enabled by default  | Disabled by default        |
| VMware vSphere            | Enabled by default  | Not supported              |

For all other platforms, the MCO does not update the boot image with each cluster update.

</div>

For example, with the feature disabled, if your cluster was originally created with OpenShift Container Platform 4.16, the boot image that the MCO would use to create new nodes is the same RHCOS version that was installed for the cluster, even if your cluster is currently at a later OpenShift Container Platform version.

Using an older boot image could cause the following issues:

- Extra time to start nodes

- Certificate expiration issues

- Version skew issues

You can disable the boot image management feature, if needed. When the feature is disabled, the boot image version no longer updates with the cluster. For example, you could disable the boot image management feature in order to use a custom boot image that you do not want changed. For information on how to disable this feature, see "Disabling boot image management". If you disable this feature, you can re-enable the feature at any time. For information, see "Enabling boot image management".

How the cluster behaves after disabling or re-enabling the feature, depends upon when you made the change, including the following scenarios:

- If you disable the feature before updating to a new OpenShift Container Platform version:

  - The boot image version used by the machine sets remains the same OpenShift Container Platform version as when the feature was disabled.

  - When you scale up nodes, the new nodes use that same OpenShift Container Platform version.

- If you disable the feature after updating to a new OpenShift Container Platform version:

  - The boot image version used by the machine sets is updated to match the updated OpenShift Container Platform version.

  - When you scale up nodes, the new nodes use the updated OpenShift Container Platform version.

  - If you update to a later OpenShift Container Platform version, the boot image version in the machine sets remains at the current version and is not updated with the cluster.

- If you enable the feature after disabling:

  - The boot image version used by the machine sets is updated to the current OpenShift Container Platform version, if different.

  - When you scale up nodes, the new nodes use the current OpenShift Container Platform version in the cluster.

<div class="note">

Because a boot image is used only when a node is scaled up, this feature has no effect on existing nodes.

</div>

To view the current Red Hat Enterprise Linux CoreOS (RHCOS) boot image version used in your cluster, you can view the `/sysroot/.coreos-aleph-version.json` file on that node.

<div class="formalpara-title">

**Example coreos-aleph-version.json file with an older boot image**

</div>

``` yaml
{
# ...
    "ref": "docker://ostree-image-signed:oci-archive:/rhcos-418.94.202511191518-0-ostree.x86_64.ociarchive",
    "version": "418.94.202511191518-0"
}
```

where:

`<version>`
Specifies the Red Hat Enterprise Linux CoreOS (RHCOS) boot image version. In this example, the boot image is from the originally-installed OpenShift Container Platform 4.18 version, regardless of the current version of the cluster.

<div class="important">

If any of the machine sets for which you want to enable boot image management use a `*-user-data` secret that is based on Ignition version 2.2.0, the Machine Config Operator converts the Ignition version to 3.4.0 when you enable the feature. OpenShift Container Platform versions 4.5 and lower use Ignition version 2.2.0. If this conversion fails, the MCO or your cluster could degrade. An error message that includes *err: converting ignition stub failed: failed to parse Ignition config* is added to the output of the `oc get ClusterOperator machine-config` command. You can use the following general steps to correct the problem:

1.  Disable the boot image management feature. For information, see "Disabling boot image management".

2.  Manually update the `*-user-data` secret to use Ignition version to 3.2.0.

3.  Enable the boot image management feature. For information, see "Enabling boot image management".

</div>

- [Disabling boot image management](../machine_configuration/mco-update-boot-images.xml#mco-update-boot-images-disable_machine-configs-configure)

- [Enabling boot image management](../machine_configuration/mco-update-boot-images.xml#mco-update-boot-images-configuring_machine-configs-configure)

# Enabling boot image management

For supported platforms, the Machine Config Operator (MCO) can manage and update the boot image on each node to ensure the Red Hat Enterprise Linux CoreOS (RHCOS) version of the boot image matches the Red Hat Enterprise Linux CoreOS (RHCOS) version appropriate for your cluster.

<div class="note">

The following table lists the platforms on which boot image management is available:

| Platform                  | Worker machine sets | Control plane machine sets |
|---------------------------|---------------------|----------------------------|
| Google Cloud              | Enabled by default  | Disabled by default        |
| Amazon Web Services (AWS) | Enabled by default  | Disabled by default        |
| Microsoft Azure           | Enabled by default  | Disabled by default        |
| VMware vSphere            | Enabled by default  | Not supported              |

For all other platforms, the MCO does not update the boot image with each cluster update.

</div>

To enable the boot image management feature for control plane machine sets or to re-enable the boot image management feature for worker machine sets where it was disabled, edit the `MachineConfiguration` object. You can enable the feature for all of the machine sets in the cluster or specific machine sets.

<div class="note">

Because the boot image management feature for worker nodes is default for the Google Cloud and AWS platforms, the `managedBootImages` configuration does not appear in the machine configuration object. To enable the feature for control plane machine sets without disabling the feature for worker machine sets, you must expressly add the configuration for both the control plane and worker machine sets, as shown in the following procedure. If you add only the configuration for control plane machine sets, due to default behavior, the Machine Config Operator (MCO) overwrites the configuration for the worker machine sets.

</div>

Enabling the feature updates the boot image to the Red Hat Enterprise Linux CoreOS (RHCOS) boot image version appropriate for your cluster. If the cluster is again updated to a new OpenShift Container Platform version in the future, the boot image is updated again. New nodes created after enabling the feature use the updated boot image. This feature has no effect on existing nodes.

- If you are enabling boot image management for control plane machine sets, you enabled the required Technology Preview features for your cluster by editing the `FeatureGate` CR named `cluster`.

1.  Edit the `MachineConfiguration` object, named `cluster`, by using the following command:

    ``` terminal
    $ oc edit MachineConfiguration cluster
    ```

2.  Enable the boot image management feature for some or all of your machine sets:

    - Enable the boot image management feature for all machine sets:

      ``` yaml
      apiVersion: operator.openshift.io/v1
      kind: MachineConfiguration
      metadata:
        name: cluster
      spec:
      # ...
        managedBootImages:
          machineManagers:
          - apiGroup: machine.openshift.io
            resource: controlplanemachinesets
            selection:
              mode: All
          - apiGroup: machine.openshift.io
            resource: machinesets
            selection:
              mode: All
      ```

      where:

      `spec.managedBootImages`
      Configures the boot image management feature.

      `spec.managedBootImages.machineManagers.apiGroup`
      Specifies the API group. This must be `machine.openshift.io`.

      `spec.managedBootImages.machineManagers.resource`
      Specifies the resource within the specified API group to apply the change. Use one or both of the following parameters. You must add the full stanza, as shown, if you want to enable the feature for control plane and worker machine sets.

      - `controlplanemachinesets`: Enables boot image management for control plane machine sets.

      - `machinesets`: Enables boot image management for worker machine sets.

      `spec.managedBootImages.machineManagers.selection.mode`
      Specifies that the feature is enabled for all machine sets in the cluster.

    - Enable the boot image management feature for specific worker machine sets:

      ``` yaml
      apiVersion: operator.openshift.io/v1
      kind: MachineConfiguration
      metadata:
        name: cluster
      spec:
      # ...
        managedBootImages:
          machineManagers:
          - apiGroup: machine.openshift.io
            resource: machinesets
            selection:
              mode: Partial
              partial:
                machineResourceSelector:
                  matchLabels:
                    region: "east"
      ```

      where:

      `spec.managedBootImages`
      Configures the boot image management feature.

      `spec.managedBootImages.machineManagers.apiGroup`
      Specifies the API group. This must be `machine.openshift.io`.

      `spec.managedBootImages.machineManagers.resource`
      Specifies the resource within the specified API group to apply the change. This must be `machinesets`. Partial boot image management for control plane machine sets is not supported.

      `spec.managedBootImages.machineManagers.selection.mode`
      Specifies that the feature is enabled for specific machine sets in the cluster. This must be `Partial`.

      `spec.managedBootImages.machineManagers.selection.partial`
      Specifies that the feature is enabled for machine sets with the specified label in their `MachineSet` object.

<!-- -->

1.  View the current state of the boot image management feature by using the following command to view the machine configuration object:

    ``` terminal
    $ oc get machineconfiguration cluster -o yaml
    ```

    <div class="formalpara-title">

    **Example machine set with the boot image reference**

    </div>

    ``` yaml
    kind: MachineConfiguration
    metadata:
      name: cluster
    # ...
    status:
      conditions:
      - lastTransitionTime: "2025-05-01T20:11:49Z"
        message: Reconciled 2 of 4 MAPI MachineSets | Reconciled 0 of 0 CAPI MachineSets
          | Reconciled 0 of 0 CAPI MachineDeployments
        reason: BootImageUpdateConfigurationUpdated
        status: "True"
        type: BootImageUpdateProgressing
      - lastTransitionTime: "2025-05-01T19:30:13Z"
        message: 0 Degraded MAPI MachineSets | 0 Degraded CAPI MachineSets | 0 CAPI MachineDeployments
        reason: BootImageUpdateConfigurationUpdated
        status: "False"
        type: BootImageUpdateDegraded
      managedBootImagesStatus:
        machineManagers:
        - apiGroup: machine.openshift.io
          resource: controlplanemachinesets
          selection:
            mode: All
        - apiGroup: machine.openshift.io
          resource: machinesets
          selection:
            mode: All
    ```

    where:

    `status.managedBootImagesStatus.machineManagers.selection.mode`
    Specifies that the boot image management feature is enabled when set to `All`.

2.  Scale a machine set to create a new node by using a command similar to the following. The boot image is updated only for new nodes.

    ``` terminal
    $ oc scale --replicas=2 machinesets.machine.openshift.io <machineset> -n openshift-machine-api
    ```

3.  If your cluster was using an older boot image version, you can see the new boot image version when the new node reaches the `READY` state. View the Red Hat Enterprise Linux CoreOS (RHCOS) version on a nodes:

    1.  Log in to the node by using a command similar to the following:

        ``` terminal
        $ oc debug node/<node_name>
        ```

    2.  Set `/host` as the root directory within the debug shell by using the following command:

        ``` terminal
        sh-5.1# chroot /host
        ```

    3.  View the `/sysroot/.coreos-aleph-version.json` file by using a command similar to the following:

        ``` terminal
        sh-5.1# cat /sysroot/.coreos-aleph-version.json
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` yaml
        {
        # ...
            "ref": "docker://ostree-image-signed:oci-archive:/rhcos-9.6.20251015-1-ostree.x86_64.ociarchive",
            "version": "9.6.20251015-1"
        }
        ```

        where:

        `<version>`
        Specifies the boot image version.

## Manually updating the boot image on an RHOSP cluster

For a Red Hat OpenStack Platform (RHOSP) cluster, you can manually update the boot image for your cluster by configuring your machine sets to use the latest OpenShift Container Platform image as the boot image to help ensure any new nodes can scale up properly.

<div class="note">

The standard boot image management feature is not supported for RHOSP clusters.

</div>

The following procedure, which includes steps to create environment variables that facilitate running the required commands, shows how to obtain RHOSP authentication credentials, download a boot image, upload that image to the RHOSP image service (Glance), and modify your worker machine sets to use the new boot image.

This procedure requires the `clouds.yaml` file, which is needed by the OpenStackClient CLI to connect to your RHOSP cloud. If you need to re-create this file, you can get the RHOSP credentials from an OpenShift Container Platform secret, the name of which you can find in the default compute machine set. You can decrypt this secret and export the credentials to create the `clouds.yaml` file, as described in the following procedure.

<div class="note">

Updating control plane machine sets is not supported in RHOSP.

</div>

- You have completed the general boot image prerequisites as described in the Prerequisites section of [OpenShift Container Platform Boot Image Updates](https://access.redhat.com/articles/7053165#prerequisites-2).

- You have downloaded the latest version of the OpenShift Container Platform installation program, openshift-install, from the [OpenShift Cluster Manager](https://console.redhat.com/openshift). For more information, see "Obtaining the installation program."

- You have installed the OpenShift CLI (`oc`) installed.

- You have installed the [OpenStackClient (RHCOS documentation)](https://docs.openstack.org/python-openstackclient/latest/).

- You have installed the [`jq`](https://stedolan.github.io/jq/) program.

1.  If you need to re-create the `clouds.yaml` file, perform the following steps:

    1.  Obtain the name of the secret that contains your credentials by running the following command:

        ``` terminal
        $ oc get machineset -n openshift-machine-api -o yaml | grep cloudsSecret -A 1
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        cloudsSecret:
          name: openstack-cloud-credentials
        ```

    2.  Decrypt the secret and add the contents to the `clouds.yaml` file by running the following command:

        ``` terminal
        $ oc get secret <secret_name> -n openshift-machine-api -o jsonpath='{.data.clouds\.yaml}' | base64 -d > <file_path>/clouds.yaml
        ```

        Replace `<secret_name>` with the name of the secret, which you obtained in the previous step, and `<file_path>` with the path to the `clouds.yaml` file.

    3.  Optional: Verify the contents of the `clouds.yaml` file by running the following command:

        ``` terminal
        $ cat <file_path>/clouds.yaml
        ```

        Replace `<file_path>` with the path to the `clouds.yaml` file.

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        clouds:
          openstack:
            auth:
              auth_url: https://your-openstack-url:13000
              username: "your-username"
              password: "your-password"
              project_name: "your-project"
              user_domain_name: "Default"
              project_domain_name: "Default"
        ```

2.  Set an environment variable for the location of the `clouds.yaml` file by running the following command:

    ``` terminal
    $ export OS_CLIENT_CONFIG_FILE=<file_path>/clouds.yaml
    ```

    Replace `<file_path>` with the path to the `clouds.yaml` file.

    The OpenStackClient CLI uses this environment variable to locate the `clouds.yaml` file.

3.  Obtain the name of your RHOSP cloud from the default compute machine set and set the name in an environment variable by running the following command:

    ``` terminal
    $ export CLOUD_NAME=$(oc get machineset -n openshift-machine-api -o jsonpath='{.items[0].spec.template.spec.providerSpec.value.cloudName}')
    ```

4.  Obtain the URL of the RHCOS image you want to use as the boot image and set the location in an environment variable by running one of the following commands, based on cluster architecture:

    - Linux (x86_64, amd64):

      ``` terminal
      $ export RHCOS_URL=$(openshift-install coreos print-stream-json | jq -r \
        '.architectures.x86_64.artifacts.openstack.formats."qcow2.gz".disk.location')
      ```

    - Linux on IBM Z® and IBM® LinuxONE (s390x):

      ``` terminal
      $ export RHCOS_URL=$(openshift-install coreos print-stream-json | jq -r \
        '.architectures.s390x.artifacts.openstack.formats."qcow2.gz".disk.location')
      ```

    - Linux on ARM (aarch64, arm64)

      ``` terminal
      $ export RHCOS_URL=$(openshift-install coreos print-stream-json | jq -r \
        '.architectures.aarch64.artifacts.openstack.formats."qcow2.gz".disk.location')
      ```

5.  Obtain the boot image and upload the image to the RHOSP image service (Glance):

    1.  Download the image by using the following command:

        ``` terminal
        $ curl -L -o /tmp/rhcos-new.qcow2.gz "${RHCOS_URL}"
        ```

        `RHCOS_URL` is the URL environment variables you created in a previous step.

    2.  Decompress the downloaded image by using the following command:

        ``` terminal
        $ gunzip <file_path>/rhcos-new.qcow2.gz
        ```

        Replace `<file_path>` with the path to the location for the image.

    3.  Set an environment variable to create a descriptive name for your boot image in Glance by running the following command:

        ``` terminal
        $ export IMAGE_NAME="<descriptive_image_name>"
        ```

        Setting a descriptive name for your boot image, such as using the Red Hat Enterprise Linux CoreOS (RHCOS) version number in the image name, makes it easier to track which version is currently deployed if you update the cluster in the future.

        <div class="formalpara-title">

        **Example command**

        </div>

        ``` terminal
        $ export IMAGE_NAME="rhcos 9.6 boot image"
        ```

    4.  Upload the image to Glance by using the following command:

        ``` terminal
        $ openstack --os-cloud "${CLOUD_NAME}" image create "${IMAGE_NAME}" \
          --disk-format qcow2 \
          --container-format bare \
          --file <file_path>/rhcos-new.qcow2 \
          --property os_type=linux \
          --property os_distro=rhcos
        ```

        Replace `<file_path>` with the path to the location for the image.

        `CLOUD_NAME` and `IMAGE_NAME` are environment variables you created in previous steps.

        It might take several minutes for the image to upload. When the upload is complete, details on the image displays, similar to the following example:

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        +------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
        | Field            | Value                                                                                                                                                                               |
        +------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
        | checksum         | 469fa549f706617ff15b41bd2a919679                                                                                                                                                    |
        # ...                                                                                                                                                         |
        | disk_format      | qcow2                                                                                                                                                                               |
        # ...
        | name             | rhcos 9.6 boot image
        ```

    5.  Optional: Verify that the image has uploaded and is in active state by running the following command:

        ``` terminal
        $ openstack --os-cloud "${CLOUD_NAME}" image show "${IMAGE_NAME}" -f json | jq '{name: .name, status: .status}'
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        {
          "name": "rhcos 9.6 boot image",
          "status": "active"
        }
        ```

6.  Update each of your compute machine sets to include the new boot image:

    1.  Obtain the name of your machine sets for use in the following step by running the following command:

        ``` terminal
        $ oc get machineset -n openshift-machine-api
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        NAME                                 DESIRED   CURRENT   READY   AVAILABLE   AGE
        rhhdrbk-b5564-4pcm9-worker-0         3         3         3       3           123m
        ci-ln-xj96skb-72292-48nm5-worker-d   1         1         1       1           27m
        ```

    2.  Edit a machine set to update the `image` field in the `providerSpec` stanza to add your boot image by running the following command:

        ``` terminal
        $ oc patch machineset <machineset_name> -n openshift-machine-api --type merge -p \
          '{"spec":{"template":{"spec":{"providerSpec":{"value":{"image":"'${IMAGE_NAME}'"}}}}}}'
        ```

        Replace `<machineset_name>` with the name of your machine set.

        `IMAGE_NAME` is the environment variable you created in a previous step.

<!-- -->

1.  Scale up a machine set to check that the new node is using the new boot image:

    1.  Increase the machine set replicas by one to trigger a new machine by running the following command:

        ``` terminal
        $ oc scale --replicas=<count> machineset <machineset_name> -n openshift-machine-api
        ```

        where:

        `<count>`
        Specifies the total number of replicas, including any existing replicas, that you want for this machine set.

        `<machineset_name>`
        Specifies the name of the machine set to scale.

    2.  Optional: View the status of the machine set as it provisions by running the following command:

        ``` terminal
        $ oc get machines.machine.openshift.io -n openshift-machine-api -w
        ```

        It can take several minutes for the machine set to achieve the `Running` state.

    3.  Verify that the new node has been created and is in the `Ready` state by running the following command:

        ``` terminal
        $ oc get nodes
        ```

2.  Verify that the new node is using the new boot image by running the following command:

    ``` terminal
    $ oc debug node/<new_node> -- chroot /host cat /sysroot/.coreos-aleph-version.json
    ```

    Replace `<new_node>` with the name of your new node.

    <div class="formalpara-title">

    **Example output**

    </div>

    ``` terminal
    {
    # ...
        "ref": "docker://ostree-image-signed:oci-archive:/rhcos-9.6.20251212-1-ostree.x86_64.ociarchive",
        "version": "9.6.20251212-1"
    }
    ```

    where:

    `version`
    Specifies the boot image version.

    After you migrate all machine sets to the new boot image, you can remove the old boot image from Glance.

- [Obtaining the installation program](../installing/installing_aws/ipi/ipi-aws-preparing-to-install.xml#installation-obtaining-installer_ipi-aws-preparing-to-install)

# Disabling boot image management

You can disable the boot image management feature so that the Machine Config Operator (MCO) no longer manages or updates the boot image in the affected machine sets. For example, you could disable this feature for the worker nodes in order to use a custom boot image that you do not want changed.

You disable the boot image management feature for the control plane or worker machine sets in your cluster by editing the `MachineConfiguration` object.

<div class="note">

The following table lists the platforms on which boot image management is available:

| Platform                  | Worker machine sets | Control plane machine sets |
|---------------------------|---------------------|----------------------------|
| Google Cloud              | Enabled by default  | Disabled by default        |
| Amazon Web Services (AWS) | Enabled by default  | Disabled by default        |
| Microsoft Azure           | Enabled by default  | Disabled by default        |
| VMware vSphere            | Enabled by default  | Not supported              |

For all other platforms, the MCO does not update the boot image with each cluster update.

</div>

Disabling this feature does not rollback the nodes or machine sets to the originally-installed boot image. The machine sets retain the boot image version that was present when the feature was disabled and is not updated if the cluster is upgraded to a new OpenShift Container Platform version in the future. This feature has no effect on existing nodes.

After disabling the feature, you can re-enable the feature at any time. For more information, see "Enabling updated boot images".

1.  Edit the `MachineConfiguration` object, named `cluster`, by using the following command::

    ``` terminal
    $ oc edit MachineConfiguration cluster
    ```

2.  Disable the feature for some or all of your machine sets:

    ``` yaml
    apiVersion: operator.openshift.io/v1
    kind: MachineConfiguration
    metadata:
      name: cluster
    spec:
    # ...
      managedBootImages:
        machineManagers:
        - apiGroup: machine.openshift.io
          resource: machinesets
          selection:
            mode: None
        - apiGroup: machine.openshift.io
          resource: controlplanemachinesets
          selection:
            mode: None
    ```

    where:

    `spec.managedBootImages`
    Configures the boot image management feature.

    `spec.managedBootImages.machineManagers.selection.mode.None`
    Specifies that the feature is disabled for all machine sets in the cluster. Set the selection mode to `None` for one or both of the following resources to disable the feature for that resource.

    - `controlplanemachinesets`: Disable boot image management for control plane machine sets.

    - `machinesets`: Disables boot image management for worker machine sets.

- View the current state of the boot image management feature by using the following command to view the machine configuration object:

  ``` terminal
  $ oc get machineconfiguration cluster -o yaml
  ```

  <div class="formalpara-title">

  **Example machine set with the boot image reference**

  </div>

  ``` yaml
  kind: MachineConfiguration
  metadata:
    name: cluster
  # ...
  status:
    conditions:
    - lastTransitionTime: "2025-05-01T20:11:49Z"
      message: Reconciled 2 of 4 MAPI MachineSets | Reconciled 0 of 0 CAPI MachineSets
        | Reconciled 0 of 0 CAPI MachineDeployments
      reason: BootImageUpdateConfigurationUpdated
      status: "True"
      type: BootImageUpdateProgressing
    - lastTransitionTime: "2025-05-01T19:30:13Z"
      message: 0 Degraded MAPI MachineSets | 0 Degraded CAPI MachineSets | 0 CAPI MachineDeployments
      reason: BootImageUpdateConfigurationUpdated
      status: "False"
      type: BootImageUpdateDegraded
    managedBootImagesStatus:
      machineManagers:
      - apiGroup: machine.openshift.io
        resource: controlplanemachinesets
        selection:
          mode: None
      - apiGroup: machine.openshift.io
        resource: machinesets
        selection:
          mode: All
  ```

  where:

  `status.managedBootImagesStatus.machineManagers.selection.mode`
  Specifies that the boot image management feature is disabled when set to `None`. In this example, the boot image management feature is disabled for control plane machine sets and enabled for worker machine sets.
